# masoero-opensim

./: .gitignore  IMPLEMENT.md  INIT.md  README.md  justfile  pyproject.toml
environment/: README.md
scripts/: 00_verify_opensim.py  01_add_markers.py  02_solve_pose.py  03_export_metrics.py  04_export_transforms_json.py  05_render_pose.py  06_export_pose_viewer.py  07_pose_editor.py  08_apply_editor_patch.py
specs/: constraints_bad.yaml  constraints_good.yaml  landmarks.yaml
src/masoero_opensim/: __init__.py  commands.py  config.py  editor_patch.py  mesh_viewer.py  opensim_utils.py  pose_editor.py  pose_solver.py  rendering.py  reporting.py  runtime.py  specs.py
